--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
