--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Migrate==2.0.0
 Flask-Modus==0.0.1
 Flask-RESTful==0.3.5
 Flask-Script==2.0.5
+Flask-SocketIO==2.8.1
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.6.1
 Flask-WTF==0.13.1
@@ -35,6 +36,8 @@ Pygments==2.1.3
 PyJWT==1.4.2
 python-dateutil==2.6.0
 python-editor==1.0.1
+python-engineio==1.1.0
+python-socketio==1.6.1
 pytz==2016.7
 requests==2.12.1
 simplegeneric==0.8.1
