--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ bcrypt==3.1.1
 cffi==1.9.1
 click==6.6
 decorator==4.0.10
+enum-compat==0.0.2
+eventlet==0.20.0
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
 Flask-JWT==0.3.2
@@ -18,6 +20,7 @@ Flask-SocketIO==2.8.1
 Flask-SQLAlchemy==2.1
 Flask-Testing==0.6.1
 Flask-WTF==0.13.1
+greenlet==0.4.11
 gunicorn==19.6.0
 ipython==5.1.0
 ipython-genutils==0.1.0
